--- a/NewsLater/Base.lproj/Main.storyboard
+++ b/NewsLater/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Title" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zaR-uo-5Ju">
                                                     <rect key="frame" x="196" y="8" width="42" height="28"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -61,6 +61,21 @@
                                             <outlet property="thumbnail" destination="e5q-C7-15m" id="mDC-8i-jAA"/>
                                             <outlet property="title" destination="zaR-uo-5Ju" id="M4g-fC-DFS"/>
                                         </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="setting_cell" textLabel="ThJ-YE-fgx" style="IBUITableViewCellStyleDefault" id="Rz9-EZ-ZZf">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Rz9-EZ-ZZf" id="sOV-uo-3Pp">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ThJ-YE-fgx">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -100,11 +115,13 @@
                     </view>
                     <connections>
                         <outlet property="feedView" destination="W7v-US-IQx" id="6TG-fq-8HU"/>
+                        <segue destination="LAI-zI-d0b" kind="show" identifier="toArticle" id="qqM-dS-P0b"/>
+                        <segue destination="Tr8-Rk-8So" kind="show" identifier="toReminder" id="g35-j4-mZS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rdO-MH-APD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="223" y="-406"/>
+            <point key="canvasLocation" x="217" y="-385"/>
         </scene>
         <!--Reminders View Controller-->
         <scene sceneID="D24-dK-xRE">
@@ -130,12 +147,13 @@
                                     <navigationItem title="Title" id="Bzb-np-zqX">
                                         <barButtonItem key="leftBarButtonItem" title="Back" id="mty-9B-Z03">
                                             <connections>
-                                                <segue destination="KWX-Tf-BA9" kind="unwind" unwindAction="returnToFeed:" id="W45-iv-66L"/>
+                                                <segue destination="KWX-Tf-BA9" kind="unwind" identifier="returnToFeed" unwindAction="returnToFeed:" id="W45-iv-66L"/>
                                             </connections>
                                         </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="GLA-7d-6I2">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="GLA-7d-6I2">
                                             <connections>
-                                                <segue destination="gVJ-GI-Gfz" kind="show" identifier="addReminder" id="2QE-Kj-Dmd"/>
+                                                <action selector="setReminder:" destination="Tr8-Rk-8So" id="dMw-5M-rDa"/>
+                                                <segue destination="KWX-Tf-BA9" kind="unwind" identifier="saveThenReturn" unwindAction="returnToFeed:" id="ph4-r0-aLd"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -145,7 +163,7 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="dynamicCellType" textLabel="xQF-hg-jkX" detailTextLabel="SxM-aa-R9L" style="IBUITableViewCellStyleValue1" id="4qS-3I-SXH">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="staticCellType" textLabel="xQF-hg-jkX" style="IBUITableViewCellStyleDefault" id="4qS-3I-SXH">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4qS-3I-SXH" id="iqR-4L-A0p">
@@ -157,16 +175,10 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SxM-aa-R9L">
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="dynamicCellType2" textLabel="a5Q-Hq-ZGO" detailTextLabel="FAX-Xl-oc4" style="IBUITableViewCellStyleValue1" id="hz6-FO-uQS">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="dynamicCellType" textLabel="a5Q-Hq-ZGO" detailTextLabel="FAX-Xl-oc4" style="IBUITableViewCellStyleValue1" id="hz6-FO-uQS">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hz6-FO-uQS" id="WyT-iP-5x2">
@@ -207,13 +219,15 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="reminderTable" destination="MGo-hH-E39" id="xe1-jY-T8i"/>
+                        <outlet property="doneBut" destination="GLA-7d-6I2" id="6HU-EJ-vPx"/>
+                        <outlet property="reminderTable" destination="MGo-hH-E39" id="PPP-QG-zzv"/>
+                        <segue destination="gVJ-GI-Gfz" kind="show" identifier="toPicker" id="NRb-Rj-Wa9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wkm-z8-QGy" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="KWX-Tf-BA9" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="377" y="328"/>
+            <point key="canvasLocation" x="217" y="416"/>
         </scene>
         <!--Reminder Picker View Controller-->
         <scene sceneID="92B-KZ-U88">
@@ -227,18 +241,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <pickerView contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yrE-BH-sHl">
+                                <rect key="frame" x="0.0" y="83" width="600" height="162"/>
+                            </pickerView>
                             <navigationBar contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pz4-Km-kgu">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
                                     <navigationItem title="Title" id="6z1-Sk-ko9">
-                                        <barButtonItem key="leftBarButtonItem" title="Back" id="pHU-Uf-uND"/>
-                                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="eNt-hz-8Ls"/>
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="pHU-Uf-uND">
+                                            <connections>
+                                                <action selector="backToReminder:" destination="gVJ-GI-Gfz" id="ePT-5l-E1C"/>
+                                                <segue destination="3Xn-eC-bwh" kind="unwind" identifier="returnToReminderList" unwindAction="returnToReminderList:" id="JEt-Gp-KWn"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="eNt-hz-8Ls">
+                                            <connections>
+                                                <action selector="saveReminder:" destination="gVJ-GI-Gfz" id="xNz-oJ-tyN"/>
+                                                <segue destination="3Xn-eC-bwh" kind="unwind" identifier="saveToReminderList" unwindAction="saveToReminderList:" id="be1-aA-k62"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <pickerView contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yrE-BH-sHl">
-                                <rect key="frame" x="0.0" y="83" width="600" height="162"/>
-                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -252,12 +276,14 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="reminderTimePicker" destination="yrE-BH-sHl" id="6sz-mJ-N94"/>
+                        <outlet property="reminderTimePicker" destination="yrE-BH-sHl" id="szI-Sr-j3k"/>
+                        <outlet property="save" destination="eNt-hz-8Ls" id="C1K-SJ-ykd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mfM-mA-l6s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="3Xn-eC-bwh" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="217" y="1099"/>
+            <point key="canvasLocation" x="217" y="1134"/>
         </scene>
         <!--Recently Read View Controller-->
         <scene sceneID="5M0-fy-lZd">
@@ -375,7 +401,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="igl-8X-O1H" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="hz0-aR-eLa" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1075" y="328"/>
+            <point key="canvasLocation" x="1085" y="355"/>
         </scene>
     </scenes>
     <resources>
