--- a/NewsLater/Base.lproj/Main.storyboard
+++ b/NewsLater/Base.lproj/Main.storyboard
@@ -153,7 +153,7 @@
                                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="GLA-7d-6I2">
                                             <connections>
                                                 <action selector="setReminder:" destination="Tr8-Rk-8So" id="dMw-5M-rDa"/>
-                                                <segue destination="KWX-Tf-BA9" kind="unwind" identifier="saveThenReturn" unwindAction="returnToFeed:" id="ph4-r0-aLd"/>
+                                                <segue destination="KWX-Tf-BA9" kind="unwind" identifier="saveToFeed" unwindAction="saveToFeed:" id="fXe-po-m5S"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -241,10 +241,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <pickerView contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yrE-BH-sHl">
+                            <pickerView contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yrE-BH-sHl">
                                 <rect key="frame" x="0.0" y="83" width="600" height="162"/>
                             </pickerView>
-                            <navigationBar contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pz4-Km-kgu">
+                            <navigationBar contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pz4-Km-kgu">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
                                     <navigationItem title="Title" id="6z1-Sk-ko9">
