--- a/NewsLater/Base.lproj/Main.storyboard
+++ b/NewsLater/Base.lproj/Main.storyboard
@@ -85,6 +85,11 @@
                             </tableView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DsX-yd-4Hq">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="barTintColor" red="1" green="0.25800622919999999" blue="0.13818088519999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </textAttributes>
                                 <items>
                                     <navigationItem title="Title" id="oPd-gN-SBE">
                                         <barButtonItem key="rightBarButtonItem" title="History" id="UYP-np-Uhg">
@@ -141,24 +146,6 @@
                                     <navigationItem title="Title" id="xDh-Rb-9Cz"/>
                                 </items>
                             </navigationBar>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HXN-yI-Rqt">
-                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
-                                <items>
-                                    <navigationItem title="Title" id="Bzb-np-zqX">
-                                        <barButtonItem key="leftBarButtonItem" title="Back" id="mty-9B-Z03">
-                                            <connections>
-                                                <segue destination="KWX-Tf-BA9" kind="unwind" identifier="returnToFeed" unwindAction="returnToFeed:" id="W45-iv-66L"/>
-                                            </connections>
-                                        </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="GLA-7d-6I2">
-                                            <connections>
-                                                <action selector="setReminder:" destination="Tr8-Rk-8So" id="dMw-5M-rDa"/>
-                                                <segue destination="KWX-Tf-BA9" kind="unwind" identifier="saveToFeed" unwindAction="saveToFeed:" id="fXe-po-m5S"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="MGo-hH-E39">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -205,6 +192,29 @@
                                     <outlet property="delegate" destination="Tr8-Rk-8So" id="q0j-ev-YKi"/>
                                 </connections>
                             </tableView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HXN-yI-Rqt">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="barTintColor" red="1" green="0.25800622919999999" blue="0.13818088519999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="Reminder" id="Bzb-np-zqX">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="mty-9B-Z03">
+                                            <connections>
+                                                <segue destination="KWX-Tf-BA9" kind="unwind" identifier="returnToFeed" unwindAction="returnToFeed:" id="W45-iv-66L"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="GLA-7d-6I2">
+                                            <connections>
+                                                <action selector="setReminder:" destination="Tr8-Rk-8So" id="dMw-5M-rDa"/>
+                                                <segue destination="KWX-Tf-BA9" kind="unwind" identifier="saveToFeed" unwindAction="saveToFeed:" id="fXe-po-m5S"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -246,8 +256,13 @@
                             </pickerView>
                             <navigationBar contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pz4-Km-kgu">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="barTintColor" red="1" green="0.25800622922709193" blue="0.13818088524348371" alpha="1" colorSpace="calibratedRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </textAttributes>
                                 <items>
-                                    <navigationItem title="Title" id="6z1-Sk-ko9">
+                                    <navigationItem title="Edit Reminder" id="6z1-Sk-ko9">
                                         <barButtonItem key="leftBarButtonItem" title="Back" id="pHU-Uf-uND">
                                             <connections>
                                                 <action selector="backToReminder:" destination="gVJ-GI-Gfz" id="ePT-5l-E1C"/>
@@ -299,6 +314,11 @@
                         <subviews>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OVZ-yG-5CO">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="barTintColor" red="1" green="0.25800622919999999" blue="0.13818088519999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </textAttributes>
                                 <items>
                                     <navigationItem title="History" id="VAa-oO-YD9">
                                         <barButtonItem key="leftBarButtonItem" title="Back" id="jcw-92-zvg">
@@ -365,6 +385,11 @@
                             </navigationBar>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oQ8-Qa-GsI">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="barTintColor" red="1" green="0.25800622919999999" blue="0.13818088519999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </textAttributes>
                                 <items>
                                     <navigationItem title="Title" id="FUf-1y-iVo">
                                         <barButtonItem key="leftBarButtonItem" title="Back" id="C34-nz-UVE">
